# se-rs-ial

./: .gitignore  Cargo.toml  README.md  index.html  search-index.js
examples/: color_swirl.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  (+2 more)
se_rs_ial/: constant.DCBFAbortOnError.html  constant.DCBFBinary.html  constant.DCBFDsrSensitivity.html  constant.DCBFDtrControl_hi.html  constant.DCBFDtrControl_lo.html  constant.DCBFDummy.html  constant.DCBFErrorChar.html  constant.DCBFInX.html  constant.DCBFNull.html  constant.DCBFOutX.html  constant.DCBFOutxCtsFlow.html  constant.DCBFOutxDsrFlow.html  constant.DCBFParity.html  constant.DCBFRtsControl_hi.html  constant.DCBFRtsControl_lo.html  constant.DCBFTXContinueOnXoff.html  constant.ERROR_INVALID_USER_BUFFER.html  constant.ERROR_NOT_ENOUGH_MEMORY.html  constant.EVENPARITY.html  constant.EV_BREAK.html  constant.EV_CTS.html  constant.EV_DSR.html  constant.EV_ERR.html  constant.EV_RING.html  constant.EV_RLSD.html  constant.EV_RXCHAR.html  constant.EV_RXFLAG.html  constant.EV_TXEMPTY.html  constant.MARKPARITY.html  constant.NOPARITY.html  constant.ODDPARITY.html  constant.ONE5STOPBITS.html  constant.ONESTOPBIT.html  constant.PURGE_RXABORT.html  constant.PURGE_RXCLEAR.html  constant.PURGE_TXABORT.html  constant.PURGE_TXCLEAR.html  constant.SPACEPARITY.html  constant.TWOSTOPBITS.html  enum.DTR_CONTROL.html  (+17 more)
se_rs_ial/ffi/: enum.DTR_CONTROL.html  fn.GetCommState.html  fn.PurgeComm.html  fn.SetCommMask.html  fn.SetCommState.html  fn.SetCommTimeouts.html  fn.WaitCommEvent.html  struct.COMMTIMEOUTS.html  struct.CommEventFlags.html  struct.DCB.html  struct.DCBFlags.html  struct.PurgeFlags.html
serial_win/: index.html
src/: ffi.rs  lib.rs
src/se_rs_ial/: ffi.rs.html  lib.rs.html
unix/: search-index.js
unix/se_rs_ial/: enum.BaudRate.html  enum.ByteSize.html  enum.Parity.html  enum.StopBits.html  index.html  struct.Connection.html
unix/serial/: enum.BaudRate.html  enum.DataBits.html  enum.Direction.html  enum.FlowControl.html  enum.Parity.html  enum.StopBits.html  index.html  sidebar-items.js  struct.BlockingMode.html  struct.OpenOptions.html  struct.SerialPort.html
unix/termios/: enum.BaudRate.html  enum.When.html  index.html  struct.Termios.html
windows/: search-index.js
windows/se_rs_ial/: enum.BaudRate.html  enum.ByteSize.html
(+185 files in other folders)
