[package]
name = "se_rs_ial"
version = "0.1.0"
authors = ["bryal <96.bryal@gmail.com>"]
description = "Windows serial communications library in Rust"
repository = "https://github.com/bryal/se-rs-ial"
documentation = "https://bryal.github.io/se-rs-ial/se_rs_ial/"
readme = "README.md"
keywords = ["Windows", "terminal", "serial", "communications", "COM"]
license = "MIT"

[dependencies]
libc = "*"
bitflags = "*"
serial = "*"
serial-win = "*"